parse translation.  INCOMPATIBILITY -- use dummy abstraction instead,
for example "A -> B" => "Pi A (%_. B)".

* Pure: 'class_deps' command visualizes the subclass relation, using
the graph browser tool.

* Pure: 'print_theory' now suppresses entities with internal name
(trailing "_") by default; use '!' option for full details.


*** HOL ***

* Constant renames due to introduction of canonical name prefixing for
  class package:

    HOL.abs ~> HOL.minus_class.abs
    HOL.divide ~> HOL.divide_class.divide
    Nat.power ~> Nat.power_class.power
    Nat.size ~> Nat.size_class.size
    Numeral.number_of ~> Numeral.number_class.number_of

* case expressions and primrec: missing cases now mapped to "undefined"
instead of "arbitrary"

* new constant "undefined" with axiom "undefined x = undefined"

* new class "default" with associated constant "default"

* Library/Pretty_Int.thy: maps HOL numerals on target language integer literals
    when generating code.

* Library/Pretty_Char.thy: maps HOL characters on target language character literals
    when generating code.

* Library/Commutative_Ring.thy: switched from recdef to function package;
    constants add, mul, pow now curried.  Infix syntax for algebraic operations.

* Some steps towards more uniform lattice theory development in HOL.

    constants "meet" and "join" now named "inf" and "sup"
    constant "Meet" now named "Inf"

    classes "meet_semilorder" and "join_semilorder" now named
      "lower_semilattice" and "upper_semilattice"
    class "lorder" now named "lattice"
    class "comp_lat" now named "complete_lattice"

    Instantiation of lattice classes allows explicit definitions
    for "inf" and "sup" operations.

  INCOMPATIBILITY. Theorem renames:

    meet_left_le            ~> inf_le1
    meet_right_le           ~> inf_le2
    join_left_le            ~> sup_ge1
    join_right_le           ~> sup_ge2
    meet_join_le            ~> inf_sup_ord
    le_meetI                ~> le_infI